--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Login</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  </head>
-<body class="body-login">
+</head>
+<body class="bodyLogin">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <div class="login-container">
   <div class="login-wrapper">
@@ -28,9 +27,9 @@
             <small class="text-light">Inicie sesión para acceder al panel de control</small>
           </div>
         </div>
-        <form id="loginForm" >
+        <form>
           <div class="form-floating mb-3">
-            <input type="text" id="username" class="form-control modern-input" required
+            <input type="text" id="username" class="form-control modern-input"
               placeholder="Usuario">
             <label for="username"><i class="bi bi-person-fill me-2"></i>Usuario</label>
             <div class="invalid-feedback">
@@ -38,7 +37,7 @@
             </div>
           </div>
           <div class="form-floating mb-4">
-            <input type="password" id="password" class="form-control modern-input" required
+            <input type="password" id="password" class="form-control modern-input"
               placeholder="Contraseña">
             <label for="password"><i class="bi bi-lock-fill me-2"></i>Contraseña</label>
             <div class="invalid-feedback">
@@ -46,16 +45,12 @@
             </div>
           </div>
           
-          <div id="errorMessage" class="alert alert-danger d-none" role="alert">
-            Usuario o contrasena no validos
-          </div>
-
-          <button type="submit" class="btn btn-sereci-modern w-100 py-3 mb-3">
-            <span class="spinner-border spinner-border-sm me-2 d-none" id="spinner" role="status"></span>
+          <button type="button" class="btn btn-sereci-modern w-100 py-3 mb-3" onclick="location.href='views/postulantes.html'">
+            <span class="spinner-border spinner-border-sm me-2" role="status"></span>
             <i class="bi bi-box-arrow-in-right me-2"></i>
             <span>INICIAR SESIÓN</span>
           </button>
-        
+          </button>
         </form>
         <div class="text-center">
           <small class="text-muted fw-medium">© 2025</small>
@@ -64,6 +59,5 @@
     </div>
   </div>
 </div>
-<script src="js/login.js"></script>
 </body>
 </html>
